--- a/v2/scss/components/_buttons.scss
+++ b/v2/scss/components/_buttons.scss
@@ -5,44 +5,83 @@
     text-decoration: none;
 
     &.hero {
-        position: relative;
-        display: inline-block;
-        z-index: 10;
+        &.filled {
+            position: relative;
+            display: inline-block;
+            z-index: 10;
 
-        border: 3px solid var(--foreground);
-        color: var(--foreground);
+            border: 3px solid var(--foreground);
+            color: var(--foreground);
 
-        &.big {
-            padding: 1rem 2rem;
-            margin-top: 2rem;
+            &.big {
+                padding: 1rem 2rem;
+                margin-top: 2rem;
 
-            font-size: 1rem;
-            font-weight: 500;
-        }
+                font-size: 1rem;
+                font-weight: 500;
+            }
 
-        &:hover {
-            color: var(--background);
-        }
+            &:hover {
+                color: var(--background);
+            }
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            bottom: -1px;
-            width: 0;
-            z-index: -1;
+            &::before {
+                content: '';
+                position: absolute;
+                top: -1px;
+                left: -1px;
+                bottom: -1px;
+                width: 0;
+                z-index: -1;
 
-            background-color: var(--foreground);
+                background-color: var(--foreground);
+
+                transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            }
+
+            &:hover::before {
+                // height: calc(100% + 2px);
+                width: calc(100% + 2px);
+            }
 
             transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
         }
 
-        &:hover::before {
-            // height: calc(100% + 2px);
-            width: calc(100% + 2px);
-        }
+        &.text {
+            position: relative;
+            display: inline-block;
+            z-index: 10;
 
-        transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            color: var(--foreground);
+
+            &.big {
+                padding: 1rem 2rem;
+                margin-top: 2rem;
+
+                font-size: 1rem;
+                font-weight: 500;
+            }
+
+            &::after {
+                content: '>';
+                display: none;
+                position: absolute;
+                padding: 0 1rem;
+
+                transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            }
+
+            &:hover {
+                &::after {
+                    display: inline-block;
+                }
+            }
+
+            &:hover::after {
+                width: calc(100% + 2px);
+            }
+
+            transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+        }
     }
 }
