--- a/v2/scss/sections/_footer.scss
+++ b/v2/scss/sections/_footer.scss
@@ -3,3 +3,9 @@ footer {
     
     background-color: var(--background-three);
 }
+
+#footer-separator {
+    height: 8rem;
+
+    color: var(--background-three);
+}
