--- a/v2/scss/sections/_hero.scss
+++ b/v2/scss/sections/_hero.scss
@@ -137,7 +137,5 @@ section {
 
 #hero-separator {
     color: var(--background-two);
-    > svg {
-        height: 8rem;
-    }
+    height: 8rem;
 }
